@@ -80,6 +80,7 @@
  *               see bug report 1599652 (DG);
  * 08-May-2007 : Fixed bugs 1713401 (drawBarOutlines flag) and  1713474
  *               (shading) (DG);
+ * 15-Aug-2008 : Fixed bug 2031407 - no negative zero for stack encoding (DG);
  *
  */
 
@@ -314,7 +315,7 @@ public class StackedBarRenderer3D extends BarRenderer3D
                     baseIndex = 0;
                 }
                 negBase = negBase + v; // '+' because v is negative
-                result.add(0, new Object[] {new Integer(-s),
+                result.add(0, new Object[] {new Integer(-s - 1),
                         new Double(negBase)});
                 baseIndex++;
             }
@@ -421,12 +422,12 @@ public class StackedBarRenderer3D extends BarRenderer3D
             Object[] curr = (Object[]) values.get(index + 1);
             int series = 0;
             if (curr[0] == null) {
-                series = -((Integer) prev[0]).intValue();
+                series = -((Integer) prev[0]).intValue() - 1;
             }
             else {
                 series = ((Integer) curr[0]).intValue();
                 if (series < 0) {
-                    series = -((Integer) prev[0]).intValue();
+                    series = -((Integer) prev[0]).intValue() - 1;
                 }
             }
             double v0 = ((Double) prev[1]).doubleValue();
@@ -617,12 +618,12 @@ public class StackedBarRenderer3D extends BarRenderer3D
             Object[] curr = (Object[]) values.get(index + 1);
             int series = 0;
             if (curr[0] == null) {
-                series = -((Integer) prev[0]).intValue();
+                series = -((Integer) prev[0]).intValue() - 1;
             }
             else {
                 series = ((Integer) curr[0]).intValue();
                 if (series < 0) {
-                    series = -((Integer) prev[0]).intValue();
+                    series = -((Integer) prev[0]).intValue() - 1;
                 }
             }
             double v0 = ((Double) prev[1]).doubleValue();
